--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1>Dev. Joao</h1>
 
     <nav> 
-        <a href="https://github.com/jvnc0107" target="_blank" >
+        <a href="https://github.com/jvnc0107" target="_blank">
             <i class="fa-brands fa-github"></i>
                  </a>
         <a href="https://www.linkedin.com/in/jvnc/" target="_blank">
@@ -44,10 +44,11 @@
             <article class="text">
                 <h2>🙋🏽‍♀️ Sobre mim</h2>
                 <p>
-                    Olá me chamo João Victor, mas pode me chamar só de João, estou começando uma transição de 
-                    carreira e estou em busca da minha primeira oportunidade como DEV, tenho curso de eletrotecnica
-                    pelo SENAI e estou cursando Analise e desenvolvimento de sistemas pela Estacio de Sá, Tenho 22 anos 
-                    e estou disposto a aprender e me desenvolver como profissiomal.
+                    Olá,  me chamo João Victor, mas pode me chamar só de João, estou começando uma transição de 
+                    carreira e estou em busca da minha primeira oportunidade como DEV, tenho curso de eletrotécnica
+                    pelo SENAI e estou cursando Análise e Desenvolvimento de Sistemas pela Estácio de Sá, tenho 22 anos 
+                    e estou disposto a aprender e me desenvolver como profissional.
+
                 </p>
 
 
@@ -56,16 +57,17 @@
              <h2>👨🏽‍💻 Tecnologias</h2>
                 <div class="cards-container">
                     <div class="card">
-                        <img src="./img/techs/html5logo1.png" alt="logo HTML">
+                        <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank"><img src="./img/techs/html5.png" alt="logo HTML"></a>
                     </div>
 
                     <div class="card">
-                        <img src="./img/techs/css3logo1.png" alt="logo CSS3">
+                        <a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank"><img src="./img/techs/css3.png" alt="logo CSS3"></a>
                     </div>
 
                     <div class="card">
-                        <img src="./img/techs/jslogo1.png" alt="logo javascript">
+                        <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank"><img src="./img/techs/jslogo.png" alt="logo javascript"></a>
                     </div>
+
                     
             
                 </div>
