--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/responsive.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <!--fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -87,7 +88,7 @@
     </main>
     <footer>
         <span>
-            &copy; Joao Victor, 2022 - Todos os direitos reservados
+            &copy; Joao Victor, 2022 - Todos os direitos reservados.
         </span>
     </footer>
 </body>
