--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </aside>
         </section>
         <figure>
-            <img src="./img/techs/jvnc0107.jpg" alt="Imagem de Joao Victor">
+            <img src="./img/techs/1111.jpg" alt="Imagem de Joao Victor">
             <figcaption>Joao Victor Nascimento de Carvalho</figcaption>
         </figure>
         </section>
