alteração em foto

--- a/index.html
+++ b/index.html
@@ -73,17 +73,19 @@
                         <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank"><img
                                 src="./img/techs/jslogo.png" alt="logo javascript"></a>
                     </div>
-
-
-
                 </div>
 
             </aside>
         </section>
-        <figure>
-            <img src="./img/techs/1111.jpg" alt="Imagem de Joao Victor">
+       <!--  <figure>
+             <img src="./img/techs/1111.jpg" alt="Imagem de Joao Victor"> 
             <figcaption>Joao Victor Nascimento de Carvalho</figcaption>
-        </figure>
+        </figure> -->
+        <div class="picture">
+            <div class="panel-name">
+                <p class="name">Joao Victor Nascimento de Carvalho</p>
+            </div>
+        </div>
         </section>
     </main>
     <footer>
